@@ -49,6 +49,7 @@ require 'god/conditions/flapping'
 require 'god/conditions/http_response_code'
 require 'god/conditions/disk_usage'
 require 'god/conditions/complex'
+require 'god/conditions/file_mtime'
 
 require 'god/contact'
 require 'god/contacts/email'
